--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/strings.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/strings.xml
@@ -1,8 +1,10 @@
 <resources>
-    <string name="app_name">My Application</string>
-    <string name="happy_veggie">Happy Veggie</string>
+    <string name="app_name">Garden Ville</string>
+    <string name="happy_veggie">Garden Ville</string>
     <string name="grow_your_own_food_in_a_fun_and_easy_way">Grow your own food in a fun and easy way!</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="plant">plant</string>
+    <string name="settings">Settings</string>
 </resources>
