--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/strings.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/strings.xml
@@ -7,4 +7,5 @@
     <string name="plant">plant</string>
     <string name="settings">Settings</string>
     <string name="garden_ville">Garden Ville</string>
+    <string name="title_activity_cactus">CactusActivity</string>
 </resources>
