--- a/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/strings.xml
+++ b/App/AndroidStudioProjects/MyApplication/app/src/main/res/values/strings.xml
@@ -1,11 +1,12 @@
 <resources>
-    <string name="app_name">Garden Ville</string>
+    <string name="app_name">GardenVille</string>
     <string name="grow_your_own_food_in_a_fun_and_easy_way">Grow your own food in a fun and easy way!</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="plant">plant</string>
     <string name="settings">Settings</string>
-    <string name="garden_ville">Garden Ville</string>
     <string name="title_activity_cactus">CactusActivity</string>
+    <string name="plant_health">Plant Health:</string>
+    <string name="name_plant">Name Plant</string>
 </resources>
